# music-theory

./: '  .gitignore  Cargo.toml  LICENSE  README.md  buildplay.sh  sudo cat  test
notes/: chopin_nocturne_opus_9_no_2  roadmap
src/: bin.rs  constants.rs  lib.rs  mathh.rs
src/libr/: infos.rs  mod.rs  scales.rs
src/query/: mod.rs  printouts.rs  queries.rs
src/theory/: chord.rs  chords.rs  duration.rs  enharmonic_note.rs  interval.rs  intervals.rs  mod.rs  note.rs  pc.rs  progression.rs  scale.rs  score.rs  traits.rs
src/tones/: mod.rs  samples.rs  tone_pure.rs  tones.rs  track.rs  volfs.rs
src/utils/: infos.rs  misc.rs  mod.rs  roman_numerals.rs
