[package]
name = "music-theory-query"
version = "0.1.15"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"
description = "Music theory queries"
readme = "README.md"
license = "GPL-3.0"
repository = "https://github.com/codybloemhard/music-theory"
# keywords = ["text"]
# categories = ["command-line-interface"]

[lib]
name = "music_theory"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnrs = "0.1.4"
itertools = "0.10.3"
lapp = "0.4.0"
vec-string = "0.1.1"
